2008-09-17	Miao Yan <yanmiaobest@gmail.com>

	* bsplibc.c, bsppost.c: Merge GSOC project code to add simple device
	only filesystem (devfs), optionally completely drop out filesystem,
	and to clean up disabling newlib reentrancy support. This dropped 17K
	from the minimum.exe for sparc/sis and arm/rtl22xx_t now has a 15K
	code space.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bspgetworkarea.c: New file.  This implementation should be useable
	by most BSPs if they provide the proper support in their linker script.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clockdrv_shell.c: Remove unnecessary includes of rtems/libcsupport.h
	and rtems/libio.h.
	* bspstart.c: New file.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clockdrv_shell.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timerstub.c, tod.c: Convert to "bool".

2008-09-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* tod.c: Remove extern. RTC_Present is not defined anywhere.

2008-09-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1302/bsps
	* vmeUniverse/vmeUniverse.h: Remove
	_VME_UNIVERSE_DECLARE_SHOW_ROUTINES.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timerstub.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Fix formatting.
	* console-polled.c: Error if minor < 2 not just <= 2.

2008-08-28	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeTsi148.h, vmeUniverse/vmeTsi148.c:
	added vmeTsi148ResetBusXX(), vmeTsi148ResetBus().

2008-08-28	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/VME.h: added BSP_VMEResetBus().
