@@ -1,3 +1,9 @@
+2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* bootcard.c: Add support for optionally having a unified work area. In
+	other words, the RTEMS Workspace and C Program Heap are the same pool
+	of memory.
+
 2008-09-17	Miao Yan <yanmiaobest@gmail.com>
 
 	* bsplibc.c, bsppost.c: Merge GSOC project code to add simple device
